# dbrx_assistant

./: .env_sample  .gitignore  README.md  pyproject.toml  summarize_to_doc.py
sample/: sample_meeting.txt  sample_meeting_output.txt
